- layout bug fixed - help page updated

--- a/ClientApp/src/app/fetch-data/fetch-data.component.html
+++ b/ClientApp/src/app/fetch-data/fetch-data.component.html
@@ -13,8 +13,8 @@
   <tbody>
     <tr *ngFor="let training of trainingInfo">
       <td>{{ training.trainingName }}</td>
-      <td>{{ training.fromDate | date: "yyyy-mm-yy" }}</td>
-      <td>{{ training.toDate | date: "yyyy-mm-yy" }}</td>
+      <td>{{ training.fromDate | date: "yyyy-MM-yy" }}</td>
+      <td>{{ training.toDate | date: "yyyy-MM-yy" }}</td>
     </tr>
   </tbody>
 </table>
